Basic mechanics are up

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "files": [
     "dist/**",
-    "!**/*.unit.*",
+    "!**/*.test.*",
     "!dist/src/mocks/**"
   ],
   "repository": {
@@ -34,7 +34,7 @@
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
     },
-    "testRegex": "src/.*\\.unit\\.ts",
+    "testRegex": "src/.*\\.test\\.ts",
     "testPathIgnorePatterns": [
       "\\node_modules\\",
       "\\dist\\",
