--- a/package.json
+++ b/package.json
@@ -76,5 +76,10 @@
       }
     },
     "testURL": "http://localhost"
+  },
+  "dependencies": {
+    "@types/node": "^17.0.5",
+    "fs": "^0.0.1-security",
+    "word-list": "^3.1.0"
   }
 }
