--- a/package.json
+++ b/package.json
@@ -78,7 +78,6 @@
     "testURL": "http://localhost"
   },
   "dependencies": {
-    "@types/node": "^17.0.5",
-    "words-en": "^2.0.0"
+    "@types/node": "^17.0.5"
   }
 }
